# learn-Streamlit

./: README.md  pyproject.toml
examples/: display_data.py  inputs.py  media_files.py  page_config.py  plotly.py  texts.py  upload_files.py  widgets_1.py  widgets_2.py
